package svi.dto;
import java.util.List;
public record SalaDTO(String nome, List<PoltronaDTO> poltronas) {

}
